--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
     <br><br>
     <p class=lletra2>Alex Voces</p>
     <br><br
-    <img src="Azure/cloud.jpg">
+    <img class=imatge src"Azure/cloud.jpg">
 </body>
 </html>
