--- a/index.html
+++ b/index.html
@@ -13,6 +13,6 @@
     <br><br>
     <p class=lletra2>Alex Voces</p>
     <br><br>
-    <img class=imatge src"cloud.jpg">
+    <img class=imatge src="cloud.jpg">
 </body>
 </html>
