--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <br><br>
     <p class=lletra2>Alex Voces</p>
     <br><br>
+    <div class=cuadro>
     <img class=imatge src="cloud.jpg">
+    </div>
 </body>
 </html>
